// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserStructure should render correctly when add member modal is open 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  margin-top: 26px;
  height: fit-content;
  margin-bottom: 42px;
}

.c3 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 315px;
  height: fit-content;
}

.c5 {
  display: flex;
  flex-direction: row;
  margin-bottom: 32px;
  align-items: flex-end;
}

.c7 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c6 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c12 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c12:hover {
  background-color: #212121;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #f44336;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c9 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c14 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c10 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: fit-content;
}

.c15 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: fit-content;
}

.c11 {
  color: #0421b1;
  max-width: 190px;
}

.c16 {
  color: #212121;
  max-width: 190px;
}

.c2 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c4 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

<div
    style="display: flex; flex-direction: column; flex: 1;"
  >
    <div
      class="c0 container"
    >
      <div
        class="c1"
      >
        <img
          alt="ACRO"
          class="sponsor_img"
          data-nimg="1"
          decoding="async"
          height="115"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=640&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=640&q=75 2x"
          style="color: transparent; object-fit: contain;"
          width="235"
        />
        <div
          class="c2"
        >
          structureTest
        </div>
        <a
          class="btn dark"
          href="/directory/structureId"
        >
          <span
            class="me-2 icon"
          >
            <i
              style="height: 20px; line-height: 20px;"
            >
              <svg
                class="eva eva-book-outline"
                fill="#fff"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  data-name="Layer 2"
                >
                  <g
                    data-name="book"
                  >
                    <rect
                      height="24"
                      opacity="0"
                      width="24"
                    />
                    <path
                      d="M19 3H7a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM7 5h11v10H7a3 3 0 0 0-1 .18V6a1 1 0 0 1 1-1zm0 14a1 1 0 0 1 0-2h11v2z"
                    />
                  </g>
                </g>
              </svg>
            </i>
          </span>
          Voir dans l'annuaire
        </a>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              Membres
            </div>
            <div
              class="c7"
            >
              2
            </div>
            <div
              class="c6"
            />
          </div>
          <div>
            <button
              class="btn dark"
              data-testid="test-add-member"
            >
              <span
                class="me-2 icon"
              >
                <i
                  style="height: 20px; line-height: 20px;"
                >
                  <svg
                    class="eva eva-person-add-outline"
                    fill="#fff"
                    height="20px"
                    viewBox="0 0 24 24"
                    width="20px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      data-name="Layer 2"
                    >
                      <g
                        data-name="person-add"
                      >
                        <rect
                          height="24"
                          opacity="0"
                          width="24"
                        />
                        <path
                          d="M21 6h-1V5a1 1 0 0 0-2 0v1h-1a1 1 0 0 0 0 2h1v1a1 1 0 0 0 2 0V8h1a1 1 0 0 0 0-2z"
                        />
                        <path
                          d="M10 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"
                        />
                        <path
                          d="M10 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"
                        />
                      </g>
                    </g>
                  </svg>
                </i>
              </span>
              Ajouter un membre
            </button>
          </div>
        </div>
        <div
          class="table-responsive"
        >
          <table
            class="table table-borderless"
          >
            <thead>
              <tr>
                <th>
                  Nom
                </th>
                <th>
                  Role
                </th>
                <th>
                  Dernière connexion
                </th>
                <th>
                  Ajouté le
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="membres-table"
              >
                <td
                  class="align-middle"
                >
                  <div
                    class="c8"
                  >
                    <img
                      alt=""
                      class="user-img me-2"
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                      style="color: transparent; object-fit: contain;"
                      width="70"
                    />
                    <div
                      class="c9"
                    >
                      membre2
                    </div>
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c10"
                  >
                    Rédacteur
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c11"
                  >
                    undefined undefined
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c11"
                  />
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    style="display: flex; flex-direction: row;"
                  >
                    <div
                      class="c12"
                      hovercolor="#212121"
                    >
                      <div
                        style="margin-bottom: 4px;"
                      >
                        <span
                          class="icon"
                        >
                          <i
                            style="height: 20px; line-height: 20px;"
                          >
                            <svg
                              class="eva eva-edit"
                              fill="#ffffff"
                              height="20px"
                              viewBox="0 0 24 24"
                              width="20px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                data-name="Layer 2"
                              >
                                <g
                                  data-name="edit"
                                >
                                  <rect
                                    height="24"
                                    opacity="0"
                                    width="24"
                                  />
                                  <path
                                    d="M19.4 7.34L16.66 4.6A2 2 0 0 0 14 4.53l-9 9a2 2 0 0 0-.57 1.21L4 18.91a1 1 0 0 0 .29.8A1 1 0 0 0 5 20h.09l4.17-.38a2 2 0 0 0 1.21-.57l9-9a1.92 1.92 0 0 0-.07-2.71zM16 10.68L13.32 8l1.95-2L18 8.73z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </i>
                        </span>
                      </div>
                    </div>
                    <div
                      class="c13"
                      data-testid="delete-button"
                      hovercolor="#f44336"
                    >
                      <div
                        style="margin-bottom: 4px;"
                      >
                        <span
                          class="icon"
                        >
                          <i
                            style="height: 20px; line-height: 20px;"
                          >
                            <svg
                              class="eva eva-trash"
                              fill="#ffffff"
                              height="20px"
                              viewBox="0 0 24 24"
                              width="20px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                data-name="Layer 2"
                              >
                                <g
                                  data-name="trash"
                                >
                                  <rect
                                    height="24"
                                    opacity="0"
                                    width="24"
                                  />
                                  <path
                                    d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </i>
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                class="membres-table"
              >
                <td
                  class="align-middle"
                >
                  <div
                    class="c8"
                  >
                    <img
                      alt=""
                      class="user-img me-2"
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                      style="color: transparent; object-fit: contain;"
                      width="70"
                    />
                    <div
                      class="c14"
                    >
                      membre1
                    </div>
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c15"
                  >
                    Rédacteur
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c16"
                  >
                    undefined undefined
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c16"
                  />
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    style="display: flex; flex-direction: row;"
                  >
                    <div
                      class="c12"
                      hovercolor="#212121"
                    >
                      <div
                        style="margin-bottom: 4px;"
                      >
                        <span
                          class="icon"
                        >
                          <i
                            style="height: 20px; line-height: 20px;"
                          >
                            <svg
                              class="eva eva-edit"
                              fill="#ffffff"
                              height="20px"
                              viewBox="0 0 24 24"
                              width="20px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                data-name="Layer 2"
                              >
                                <g
                                  data-name="edit"
                                >
                                  <rect
                                    height="24"
                                    opacity="0"
                                    width="24"
                                  />
                                  <path
                                    d="M19.4 7.34L16.66 4.6A2 2 0 0 0 14 4.53l-9 9a2 2 0 0 0-.57 1.21L4 18.91a1 1 0 0 0 .29.8A1 1 0 0 0 5 20h.09l4.17-.38a2 2 0 0 0 1.21-.57l9-9a1.92 1.92 0 0 0-.07-2.71zM16 10.68L13.32 8l1.95-2L18 8.73z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </i>
                        </span>
                      </div>
                    </div>
                    <div
                      class="c13"
                      data-testid="delete-button"
                      hovercolor="#f44336"
                    >
                      <div
                        style="margin-bottom: 4px;"
                      >
                        <span
                          class="icon"
                        >
                          <i
                            style="height: 20px; line-height: 20px;"
                          >
                            <svg
                              class="eva eva-trash"
                              fill="#ffffff"
                              height="20px"
                              viewBox="0 0 24 24"
                              width="20px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                data-name="Layer 2"
                              >
                                <g
                                  data-name="trash"
                                >
                                  <rect
                                    height="24"
                                    opacity="0"
                                    width="24"
                                  />
                                  <path
                                    d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </i>
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div />
      <div />
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserStructure should render correctly when edit member modal is open, select respo and validate 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  margin-top: 26px;
  height: fit-content;
  margin-bottom: 42px;
}

.c3 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 315px;
  height: fit-content;
}

.c5 {
  display: flex;
  flex-direction: row;
  margin-bottom: 32px;
  align-items: flex-end;
}

.c7 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c6 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c12 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c12:hover {
  background-color: #212121;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #f44336;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c9 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c14 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c10 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: fit-content;
}

.c15 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: fit-content;
}

.c11 {
  color: #0421b1;
  max-width: 190px;
}

.c16 {
  color: #212121;
  max-width: 190px;
}

.c20 {
  background: #E0E0E0;
  border-width: 1px;
  border-style: solid;
  border-color: #212121;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #212121;
}

.c23 {
  background: #ffffff;
  border-width: 1px;
  border-style: solid;
  border-color: #212121;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #212121;
}

.c22 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 10px;
}

.c21 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.c18 {
  font-weight: normal;
  font-size: 32px;
  line-height: 40px;
  margin-right: 15px;
}

.c24 {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  margin-top: 12px;
}

.c17 {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-bottom: 16px;
}

.c19 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
}

.c2 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c4 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

<div
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0 container"
  >
    <div
      className="c1"
    >
      <img
        alt="ACRO"
        className="sponsor_img"
        data-nimg="1"
        decoding="async"
        height={115}
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        src="/_next/image?url=%2Fimg.jpg&w=640&q=75"
        srcSet="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=640&q=75 2x"
        style={
          {
            "color": "transparent",
            "objectFit": "contain",
          }
        }
        width={235}
      />
      <div
        className="c2"
      >
        structureTest
      </div>
      <a
        className="btn dark"
        href="/directory/structureId"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <span
          className="me-2 icon"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-book-outline" fill="#fff"><g data-name="Layer 2"><g data-name="book"><rect width="24" height="24" opacity="0"/><path d="M19 3H7a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM7 5h11v10H7a3 3 0 0 0-1 .18V6a1 1 0 0 1 1-1zm0 14a1 1 0 0 1 0-2h11v2z"/></g></g></svg>",
              }
            }
            style={
              {
                "height": "20px",
                "lineHeight": "20px",
              }
            }
          />
        </span>
        Voir dans l'annuaire
      </a>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            Membres
          </div>
          <div
            className="c7"
          >
            2
          </div>
          <div
            className="c6"
          />
        </div>
        <div>
          <button
            className="btn dark"
            data-test-id="test-add-member"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-person-add-outline" fill="#fff"><g data-name="Layer 2"><g data-name="person-add"><rect width="24" height="24" opacity="0"/><path d="M21 6h-1V5a1 1 0 0 0-2 0v1h-1a1 1 0 0 0 0 2h1v1a1 1 0 0 0 2 0V8h1a1 1 0 0 0 0-2z"/><path d="M10 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"/><path d="M10 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c8"
                >
                  <img
                    alt=""
                    className="user-img me-2"
                    data-nimg="1"
                    decoding="async"
                    height={40}
                    loading="lazy"
                    onError={[Function]}
                    onLoad={[Function]}
                    src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                    srcSet="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                    style={
                      {
                        "color": "transparent",
                        "objectFit": "contain",
                      }
                    }
                    width={70}
                  />
                  <div
                    className="c9"
                    isUser={true}
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c10"
                  isUser={true}
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                  isUser={true}
                >
                  undefined undefined
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                  isUser={true}
                />
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c12"
                    hoverColor="#212121"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span
                        className="icon"
                      >
                        <i
                          dangerouslySetInnerHTML={
                            {
                              "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-edit" fill="#ffffff"><g data-name="Layer 2"><g data-name="edit"><rect width="24" height="24" opacity="0"/><path d="M19.4 7.34L16.66 4.6A2 2 0 0 0 14 4.53l-9 9a2 2 0 0 0-.57 1.21L4 18.91a1 1 0 0 0 .29.8A1 1 0 0 0 5 20h.09l4.17-.38a2 2 0 0 0 1.21-.57l9-9a1.92 1.92 0 0 0-.07-2.71zM16 10.68L13.32 8l1.95-2L18 8.73z"/></g></g></svg>",
                            }
                          }
                          style={
                            {
                              "height": "20px",
                              "lineHeight": "20px",
                            }
                          }
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c13"
                    data-test-id="delete-button"
                    disabled={false}
                    hoverColor="#f44336"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span
                        className="icon"
                      >
                        <i
                          dangerouslySetInnerHTML={
                            {
                              "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-trash" fill="#ffffff"><g data-name="Layer 2"><g data-name="trash"><rect width="24" height="24" opacity="0"/><path d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4z"/></g></g></svg>",
                            }
                          }
                          style={
                            {
                              "height": "20px",
                              "lineHeight": "20px",
                            }
                          }
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c8"
                >
                  <img
                    alt=""
                    className="user-img me-2"
                    data-nimg="1"
                    decoding="async"
                    height={40}
                    loading="lazy"
                    onError={[Function]}
                    onLoad={[Function]}
                    src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                    srcSet="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                    style={
                      {
                        "color": "transparent",
                        "objectFit": "contain",
                      }
                    }
                    width={70}
                  />
                  <div
                    className="c14"
                    isUser={false}
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c15"
                  isUser={false}
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c16"
                  isUser={false}
                >
                  undefined undefined
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c16"
                  isUser={false}
                />
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c12"
                    hoverColor="#212121"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span
                        className="icon"
                      >
                        <i
                          dangerouslySetInnerHTML={
                            {
                              "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-edit" fill="#ffffff"><g data-name="Layer 2"><g data-name="edit"><rect width="24" height="24" opacity="0"/><path d="M19.4 7.34L16.66 4.6A2 2 0 0 0 14 4.53l-9 9a2 2 0 0 0-.57 1.21L4 18.91a1 1 0 0 0 .29.8A1 1 0 0 0 5 20h.09l4.17-.38a2 2 0 0 0 1.21-.57l9-9a1.92 1.92 0 0 0-.07-2.71zM16 10.68L13.32 8l1.95-2L18 8.73z"/></g></g></svg>",
                            }
                          }
                          style={
                            {
                              "height": "20px",
                              "lineHeight": "20px",
                            }
                          }
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c13"
                    data-test-id="delete-button"
                    disabled={false}
                    hoverColor="#f44336"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span
                        className="icon"
                      >
                        <i
                          dangerouslySetInnerHTML={
                            {
                              "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-trash" fill="#ffffff"><g data-name="Layer 2"><g data-name="trash"><rect width="24" height="24" opacity="0"/><path d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4z"/></g></g></svg>",
                            }
                          }
                          style={
                            {
                              "height": "20px",
                              "lineHeight": "20px",
                            }
                          }
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div />
    <div>
      <div
        className="c17"
      >
        <div
          className="c18"
        >
          Modifier le rôle de
        </div>
        <img
          alt=""
          className="user_img me-2"
          data-nimg="1"
          decoding="async"
          height={40}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
          srcSet="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
          style={
            {
              "color": "transparent",
              "objectFit": "contain",
            }
          }
          width={70}
        />
        <div
          className="c19"
        >
          membre1
        </div>
      </div>
      <div
        className="c20"
        data-test-id="test-role-Rédacteur"
        onClick={[Function]}
        state="current"
      >
        <div
          className="c21"
        >
          <div
            className="c22"
          >
            Nommer « rédacteur » 
          </div>
          <span
            className="icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-radio-button-on" fill="#212121"><g data-name="Layer 2"><g data-name="radio-button-on"><rect width="24" height="24" opacity="0"/><path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 18a8 8 0 1 1 8-8 8 8 0 0 1-8 8z"/><path d="M12 7a5 5 0 1 0 5 5 5 5 0 0 0-5-5z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
      </div>
      <div
        className="c23"
        data-test-id="test-role-Responsable"
        onClick={[Function]}
        state="none"
      >
        <div
          className="c21"
        >
          <div
            className="c22"
          >
            Nommer « responsable »
          </div>
          <span
            className="icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-radio-button-off" fill="#212121"><g data-name="Layer 2"><g data-name="radio-button-off"><rect width="24" height="24" opacity="0"/><path d="M12 22a10 10 0 1 1 10-10 10 10 0 0 1-10 10zm0-18a8 8 0 1 0 8 8 8 8 0 0 0-8-8z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
        <span>
          + Ajouter ou supprimer d'autres membres
          <br />
        </span>
        <span>
          + Nommer d'autres responsables
          <br />
        </span>
      </div>
      <div
        className="c24"
      >
        <button
          className="btn outline-black me-2"
          onClick={[Function]}
        >
          <span
            className="me-2 icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-close-outline" fill="#fff"><g data-name="Layer 2"><g data-name="close"><rect width="24" height="24" transform="rotate(180 12 12)" opacity="0"/><path d="M13.41 12l4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
          Annuler
        </button>
        <button
          className="btn validate"
          data-test-id="test-validate-edit"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="me-2 icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-checkmark-outline" fill="#fff"><g data-name="Layer 2"><g data-name="checkmark"><rect width="24" height="24" opacity="0"/><path d="M9.86 18a1 1 0 0 1-.73-.32l-4.86-5.17a1 1 0 1 1 1.46-1.37l4.12 4.39 8.41-9.2a1 1 0 1 1 1.48 1.34l-9.14 10a1 1 0 0 1-.73.33z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
          Valider
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when edit member modal is open, select respo and validate 2`] = `
.c0 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  margin-top: 26px;
  height: fit-content;
  margin-bottom: 42px;
}

.c3 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 315px;
  height: fit-content;
}

.c5 {
  display: flex;
  flex-direction: row;
  margin-bottom: 32px;
  align-items: flex-end;
}

.c7 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c6 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c12 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c12:hover {
  background-color: #212121;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #f44336;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c9 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c14 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c10 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: fit-content;
}

.c15 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: fit-content;
}

.c11 {
  color: #0421b1;
  max-width: 190px;
}

.c16 {
  color: #212121;
  max-width: 190px;
}

.c20 {
  background: #ffffff;
  border-width: 1px;
  border-style: solid;
  border-color: #212121;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #212121;
}

.c23 {
  background: #2d9cdb;
  border-width: 1px;
  border-style: solid;
  border-color: #2d9cdb;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #ffffff;
}

.c22 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 10px;
}

.c21 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.c18 {
  font-weight: normal;
  font-size: 32px;
  line-height: 40px;
  margin-right: 15px;
}

.c24 {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  margin-top: 12px;
}

.c17 {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-bottom: 16px;
}

.c19 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
}

.c2 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c4 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

<div
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0 container"
  >
    <div
      className="c1"
    >
      <img
        alt="ACRO"
        className="sponsor_img"
        data-nimg="1"
        decoding="async"
        height={115}
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        src="/_next/image?url=%2Fimg.jpg&w=640&q=75"
        srcSet="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=640&q=75 2x"
        style={
          {
            "color": "transparent",
            "objectFit": "contain",
          }
        }
        width={235}
      />
      <div
        className="c2"
      >
        structureTest
      </div>
      <a
        className="btn dark"
        href="/directory/structureId"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <span
          className="me-2 icon"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-book-outline" fill="#fff"><g data-name="Layer 2"><g data-name="book"><rect width="24" height="24" opacity="0"/><path d="M19 3H7a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM7 5h11v10H7a3 3 0 0 0-1 .18V6a1 1 0 0 1 1-1zm0 14a1 1 0 0 1 0-2h11v2z"/></g></g></svg>",
              }
            }
            style={
              {
                "height": "20px",
                "lineHeight": "20px",
              }
            }
          />
        </span>
        Voir dans l'annuaire
      </a>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            Membres
          </div>
          <div
            className="c7"
          >
            2
          </div>
          <div
            className="c6"
          />
        </div>
        <div>
          <button
            className="btn dark"
            data-test-id="test-add-member"
            onClick={[Function]}
          >
            <span
              className="me-2 icon"
            >
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-person-add-outline" fill="#fff"><g data-name="Layer 2"><g data-name="person-add"><rect width="24" height="24" opacity="0"/><path d="M21 6h-1V5a1 1 0 0 0-2 0v1h-1a1 1 0 0 0 0 2h1v1a1 1 0 0 0 2 0V8h1a1 1 0 0 0 0-2z"/><path d="M10 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"/><path d="M10 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"/></g></g></svg>",
                  }
                }
                style={
                  {
                    "height": "20px",
                    "lineHeight": "20px",
                  }
                }
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c8"
                >
                  <img
                    alt=""
                    className="user-img me-2"
                    data-nimg="1"
                    decoding="async"
                    height={40}
                    loading="lazy"
                    onError={[Function]}
                    onLoad={[Function]}
                    src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                    srcSet="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                    style={
                      {
                        "color": "transparent",
                        "objectFit": "contain",
                      }
                    }
                    width={70}
                  />
                  <div
                    className="c9"
                    isUser={true}
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c10"
                  isUser={true}
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                  isUser={true}
                >
                  undefined undefined
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                  isUser={true}
                />
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c12"
                    hoverColor="#212121"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span
                        className="icon"
                      >
                        <i
                          dangerouslySetInnerHTML={
                            {
                              "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-edit" fill="#ffffff"><g data-name="Layer 2"><g data-name="edit"><rect width="24" height="24" opacity="0"/><path d="M19.4 7.34L16.66 4.6A2 2 0 0 0 14 4.53l-9 9a2 2 0 0 0-.57 1.21L4 18.91a1 1 0 0 0 .29.8A1 1 0 0 0 5 20h.09l4.17-.38a2 2 0 0 0 1.21-.57l9-9a1.92 1.92 0 0 0-.07-2.71zM16 10.68L13.32 8l1.95-2L18 8.73z"/></g></g></svg>",
                            }
                          }
                          style={
                            {
                              "height": "20px",
                              "lineHeight": "20px",
                            }
                          }
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c13"
                    data-test-id="delete-button"
                    disabled={false}
                    hoverColor="#f44336"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span
                        className="icon"
                      >
                        <i
                          dangerouslySetInnerHTML={
                            {
                              "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-trash" fill="#ffffff"><g data-name="Layer 2"><g data-name="trash"><rect width="24" height="24" opacity="0"/><path d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4z"/></g></g></svg>",
                            }
                          }
                          style={
                            {
                              "height": "20px",
                              "lineHeight": "20px",
                            }
                          }
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c8"
                >
                  <img
                    alt=""
                    className="user-img me-2"
                    data-nimg="1"
                    decoding="async"
                    height={40}
                    loading="lazy"
                    onError={[Function]}
                    onLoad={[Function]}
                    src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                    srcSet="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                    style={
                      {
                        "color": "transparent",
                        "objectFit": "contain",
                      }
                    }
                    width={70}
                  />
                  <div
                    className="c14"
                    isUser={false}
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c15"
                  isUser={false}
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c16"
                  isUser={false}
                >
                  undefined undefined
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c16"
                  isUser={false}
                />
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c12"
                    hoverColor="#212121"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span
                        className="icon"
                      >
                        <i
                          dangerouslySetInnerHTML={
                            {
                              "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-edit" fill="#ffffff"><g data-name="Layer 2"><g data-name="edit"><rect width="24" height="24" opacity="0"/><path d="M19.4 7.34L16.66 4.6A2 2 0 0 0 14 4.53l-9 9a2 2 0 0 0-.57 1.21L4 18.91a1 1 0 0 0 .29.8A1 1 0 0 0 5 20h.09l4.17-.38a2 2 0 0 0 1.21-.57l9-9a1.92 1.92 0 0 0-.07-2.71zM16 10.68L13.32 8l1.95-2L18 8.73z"/></g></g></svg>",
                            }
                          }
                          style={
                            {
                              "height": "20px",
                              "lineHeight": "20px",
                            }
                          }
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c13"
                    data-test-id="delete-button"
                    disabled={false}
                    hoverColor="#f44336"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span
                        className="icon"
                      >
                        <i
                          dangerouslySetInnerHTML={
                            {
                              "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-trash" fill="#ffffff"><g data-name="Layer 2"><g data-name="trash"><rect width="24" height="24" opacity="0"/><path d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4z"/></g></g></svg>",
                            }
                          }
                          style={
                            {
                              "height": "20px",
                              "lineHeight": "20px",
                            }
                          }
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div />
    <div>
      <div
        className="c17"
      >
        <div
          className="c18"
        >
          Modifier le rôle de
        </div>
        <img
          alt=""
          className="user_img me-2"
          data-nimg="1"
          decoding="async"
          height={40}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
          srcSet="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
          style={
            {
              "color": "transparent",
              "objectFit": "contain",
            }
          }
          width={70}
        />
        <div
          className="c19"
        >
          membre1
        </div>
      </div>
      <div
        className="c20"
        data-test-id="test-role-Rédacteur"
        onClick={[Function]}
        state="none"
      >
        <div
          className="c21"
        >
          <div
            className="c22"
          >
            Nommer « rédacteur » 
          </div>
          <span
            className="icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-radio-button-off" fill="#212121"><g data-name="Layer 2"><g data-name="radio-button-off"><rect width="24" height="24" opacity="0"/><path d="M12 22a10 10 0 1 1 10-10 10 10 0 0 1-10 10zm0-18a8 8 0 1 0 8 8 8 8 0 0 0-8-8z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
      </div>
      <div
        className="c23"
        data-test-id="test-role-Responsable"
        onClick={[Function]}
        state="selected"
      >
        <div
          className="c21"
        >
          <div
            className="c22"
          >
            Nommer « responsable »
          </div>
          <span
            className="icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-radio-button-on" fill="#ffffff"><g data-name="Layer 2"><g data-name="radio-button-on"><rect width="24" height="24" opacity="0"/><path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 18a8 8 0 1 1 8-8 8 8 0 0 1-8 8z"/><path d="M12 7a5 5 0 1 0 5 5 5 5 0 0 0-5-5z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
        <span>
          + Ajouter ou supprimer d'autres membres
          <br />
        </span>
        <span>
          + Nommer d'autres responsables
          <br />
        </span>
      </div>
      <div
        className="c24"
      >
        <button
          className="btn outline-black me-2"
          onClick={[Function]}
        >
          <span
            className="me-2 icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-close-outline" fill="#fff"><g data-name="Layer 2"><g data-name="close"><rect width="24" height="24" transform="rotate(180 12 12)" opacity="0"/><path d="M13.41 12l4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
          Annuler
        </button>
        <button
          className="btn validate"
          data-test-id="test-validate-edit"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="me-2 icon"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-checkmark-outline" fill="#fff"><g data-name="Layer 2"><g data-name="checkmark"><rect width="24" height="24" opacity="0"/><path d="M9.86 18a1 1 0 0 1-.73-.32l-4.86-5.17a1 1 0 1 1 1.46-1.37l4.12 4.39 8.41-9.2a1 1 0 1 1 1.48 1.34l-9.14 10a1 1 0 0 1-.73.33z"/></g></g></svg>",
                }
              }
              style={
                {
                  "height": "20px",
                  "lineHeight": "20px",
                }
              }
            />
          </span>
          Valider
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when loading 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  margin-top: 26px;
  height: fit-content;
  margin-bottom: 42px;
}

.c2 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 315px;
  height: fit-content;
}

.c3 {
  display: flex;
  flex-direction: row;
  margin-bottom: 32px;
  align-items: flex-end;
}

.c5 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c4 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

<div
    style="display: flex; flex-direction: column; flex: 1;"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="img"
        />
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 160px; height: 20px; --base-color: #ffffff;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            Membres
          </div>
          <div
            class="c5"
          >
            ...
          </div>
          <div
            class="c4"
          />
        </div>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 700px; height: 50px; --base-color: #ffffff;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 700px; height: 50px; --base-color: #ffffff;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
            style="width: 700px; height: 50px; --base-color: #ffffff;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserStructure should render correctly when no structure 1`] = `
<DocumentFragment>
  .c0 {
  margin-top: 60px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
}

.c1 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  color: #f44336;
  margin-top: 60px;
}

<div
    style="display: flex; flex-direction: column; flex: 1;"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        Une erreur est survenue. Veuillez recharger la page ou contacter l'équipe de réfugiés.info via le live chat en bas à droite de votre écran.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserStructure should render correctly when structure with membres when user is redacteur 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  margin-top: 26px;
  height: fit-content;
  margin-bottom: 42px;
}

.c3 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 315px;
  height: fit-content;
}

.c5 {
  display: flex;
  flex-direction: row;
  margin-bottom: 32px;
  align-items: flex-end;
}

.c7 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c6 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c9 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c12 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c10 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: fit-content;
}

.c13 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: fit-content;
}

.c11 {
  color: #0421b1;
  max-width: 190px;
}

.c14 {
  color: #212121;
  max-width: 190px;
}

.c2 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c4 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

<div
    style="display: flex; flex-direction: column; flex: 1;"
  >
    <div
      class="c0 container"
    >
      <div
        class="c1"
      >
        <img
          alt="ACRO"
          class="sponsor_img"
          data-nimg="1"
          decoding="async"
          height="115"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=640&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=640&q=75 2x"
          style="color: transparent; object-fit: contain;"
          width="235"
        />
        <div
          class="c2"
        >
          structureTest
        </div>
        <a
          class="btn dark"
          href="/directory/structureId"
        >
          <span
            class="me-2 icon"
          >
            <i
              style="height: 20px; line-height: 20px;"
            >
              <svg
                class="eva eva-book-outline"
                fill="#fff"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  data-name="Layer 2"
                >
                  <g
                    data-name="book"
                  >
                    <rect
                      height="24"
                      opacity="0"
                      width="24"
                    />
                    <path
                      d="M19 3H7a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM7 5h11v10H7a3 3 0 0 0-1 .18V6a1 1 0 0 1 1-1zm0 14a1 1 0 0 1 0-2h11v2z"
                    />
                  </g>
                </g>
              </svg>
            </i>
          </span>
          Voir dans l'annuaire
        </a>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              Membres
            </div>
            <div
              class="c7"
            >
              2
            </div>
            <div
              class="c6"
            />
          </div>
        </div>
        <div
          class="table-responsive"
        >
          <table
            class="table table-borderless"
          >
            <thead>
              <tr>
                <th>
                  Nom
                </th>
                <th>
                  Role
                </th>
                <th>
                  Dernière connexion
                </th>
                <th>
                  Ajouté le
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="membres-table"
              >
                <td
                  class="align-middle"
                >
                  <div
                    class="c8"
                  >
                    <img
                      alt=""
                      class="user-img me-2"
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                      style="color: transparent; object-fit: contain;"
                      width="70"
                    />
                    <div
                      class="c9"
                    >
                      membre1
                    </div>
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c10"
                  >
                    Rédacteur
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c11"
                  >
                    undefined undefined
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c11"
                  />
                </td>
              </tr>
              <tr
                class="membres-table"
              >
                <td
                  class="align-middle"
                >
                  <div
                    class="c8"
                  >
                    <img
                      alt=""
                      class="user-img me-2"
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                      style="color: transparent; object-fit: contain;"
                      width="70"
                    />
                    <div
                      class="c12"
                    >
                      membre2
                    </div>
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c13"
                  >
                    Rédacteur
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c14"
                  >
                    undefined undefined
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c14"
                  />
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserStructure should render correctly when structure with membres when user is respo 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  margin-top: 26px;
  height: fit-content;
  margin-bottom: 42px;
}

.c3 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 315px;
  height: fit-content;
}

.c5 {
  display: flex;
  flex-direction: row;
  margin-bottom: 32px;
  align-items: flex-end;
}

.c7 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c6 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c12 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c12:hover {
  background-color: #212121;
}

.c13 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c13:hover {
  background-color: #f44336;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c9 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c14 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c10 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: fit-content;
}

.c15 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: fit-content;
}

.c11 {
  color: #0421b1;
  max-width: 190px;
}

.c16 {
  color: #212121;
  max-width: 190px;
}

.c2 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c4 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

<div
    style="display: flex; flex-direction: column; flex: 1;"
  >
    <div
      class="c0 container"
    >
      <div
        class="c1"
      >
        <img
          alt="ACRO"
          class="sponsor_img"
          data-nimg="1"
          decoding="async"
          height="115"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=640&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=640&q=75 2x"
          style="color: transparent; object-fit: contain;"
          width="235"
        />
        <div
          class="c2"
        >
          structureTest
        </div>
        <a
          class="btn dark"
          href="/directory/structureId"
        >
          <span
            class="me-2 icon"
          >
            <i
              style="height: 20px; line-height: 20px;"
            >
              <svg
                class="eva eva-book-outline"
                fill="#fff"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  data-name="Layer 2"
                >
                  <g
                    data-name="book"
                  >
                    <rect
                      height="24"
                      opacity="0"
                      width="24"
                    />
                    <path
                      d="M19 3H7a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM7 5h11v10H7a3 3 0 0 0-1 .18V6a1 1 0 0 1 1-1zm0 14a1 1 0 0 1 0-2h11v2z"
                    />
                  </g>
                </g>
              </svg>
            </i>
          </span>
          Voir dans l'annuaire
        </a>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              Membres
            </div>
            <div
              class="c7"
            >
              2
            </div>
            <div
              class="c6"
            />
          </div>
          <div>
            <button
              class="btn dark"
              data-testid="test-add-member"
            >
              <span
                class="me-2 icon"
              >
                <i
                  style="height: 20px; line-height: 20px;"
                >
                  <svg
                    class="eva eva-person-add-outline"
                    fill="#fff"
                    height="20px"
                    viewBox="0 0 24 24"
                    width="20px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      data-name="Layer 2"
                    >
                      <g
                        data-name="person-add"
                      >
                        <rect
                          height="24"
                          opacity="0"
                          width="24"
                        />
                        <path
                          d="M21 6h-1V5a1 1 0 0 0-2 0v1h-1a1 1 0 0 0 0 2h1v1a1 1 0 0 0 2 0V8h1a1 1 0 0 0 0-2z"
                        />
                        <path
                          d="M10 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"
                        />
                        <path
                          d="M10 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"
                        />
                      </g>
                    </g>
                  </svg>
                </i>
              </span>
              Ajouter un membre
            </button>
          </div>
        </div>
        <div
          class="table-responsive"
        >
          <table
            class="table table-borderless"
          >
            <thead>
              <tr>
                <th>
                  Nom
                </th>
                <th>
                  Role
                </th>
                <th>
                  Dernière connexion
                </th>
                <th>
                  Ajouté le
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="membres-table"
              >
                <td
                  class="align-middle"
                >
                  <div
                    class="c8"
                  >
                    <img
                      alt=""
                      class="user-img me-2"
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                      style="color: transparent; object-fit: contain;"
                      width="70"
                    />
                    <div
                      class="c9"
                    >
                      membre2
                    </div>
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c10"
                  >
                    Rédacteur
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c11"
                  >
                    undefined undefined
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c11"
                  />
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    style="display: flex; flex-direction: row;"
                  >
                    <div
                      class="c12"
                      hovercolor="#212121"
                    >
                      <div
                        style="margin-bottom: 4px;"
                      >
                        <span
                          class="icon"
                        >
                          <i
                            style="height: 20px; line-height: 20px;"
                          >
                            <svg
                              class="eva eva-edit"
                              fill="#ffffff"
                              height="20px"
                              viewBox="0 0 24 24"
                              width="20px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                data-name="Layer 2"
                              >
                                <g
                                  data-name="edit"
                                >
                                  <rect
                                    height="24"
                                    opacity="0"
                                    width="24"
                                  />
                                  <path
                                    d="M19.4 7.34L16.66 4.6A2 2 0 0 0 14 4.53l-9 9a2 2 0 0 0-.57 1.21L4 18.91a1 1 0 0 0 .29.8A1 1 0 0 0 5 20h.09l4.17-.38a2 2 0 0 0 1.21-.57l9-9a1.92 1.92 0 0 0-.07-2.71zM16 10.68L13.32 8l1.95-2L18 8.73z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </i>
                        </span>
                      </div>
                    </div>
                    <div
                      class="c13"
                      data-testid="delete-button"
                      hovercolor="#f44336"
                    >
                      <div
                        style="margin-bottom: 4px;"
                      >
                        <span
                          class="icon"
                        >
                          <i
                            style="height: 20px; line-height: 20px;"
                          >
                            <svg
                              class="eva eva-trash"
                              fill="#ffffff"
                              height="20px"
                              viewBox="0 0 24 24"
                              width="20px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                data-name="Layer 2"
                              >
                                <g
                                  data-name="trash"
                                >
                                  <rect
                                    height="24"
                                    opacity="0"
                                    width="24"
                                  />
                                  <path
                                    d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </i>
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                class="membres-table"
              >
                <td
                  class="align-middle"
                >
                  <div
                    class="c8"
                  >
                    <img
                      alt=""
                      class="user-img me-2"
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=96&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
                      style="color: transparent; object-fit: contain;"
                      width="70"
                    />
                    <div
                      class="c14"
                    >
                      membre1
                    </div>
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c15"
                  >
                    Rédacteur
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c16"
                  >
                    undefined undefined
                  </div>
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    class="c16"
                  />
                </td>
                <td
                  class="align-middle"
                >
                  <div
                    style="display: flex; flex-direction: row;"
                  >
                    <div
                      class="c12"
                      hovercolor="#212121"
                    >
                      <div
                        style="margin-bottom: 4px;"
                      >
                        <span
                          class="icon"
                        >
                          <i
                            style="height: 20px; line-height: 20px;"
                          >
                            <svg
                              class="eva eva-edit"
                              fill="#ffffff"
                              height="20px"
                              viewBox="0 0 24 24"
                              width="20px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                data-name="Layer 2"
                              >
                                <g
                                  data-name="edit"
                                >
                                  <rect
                                    height="24"
                                    opacity="0"
                                    width="24"
                                  />
                                  <path
                                    d="M19.4 7.34L16.66 4.6A2 2 0 0 0 14 4.53l-9 9a2 2 0 0 0-.57 1.21L4 18.91a1 1 0 0 0 .29.8A1 1 0 0 0 5 20h.09l4.17-.38a2 2 0 0 0 1.21-.57l9-9a1.92 1.92 0 0 0-.07-2.71zM16 10.68L13.32 8l1.95-2L18 8.73z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </i>
                        </span>
                      </div>
                    </div>
                    <div
                      class="c13"
                      data-testid="delete-button"
                      hovercolor="#f44336"
                    >
                      <div
                        style="margin-bottom: 4px;"
                      >
                        <span
                          class="icon"
                        >
                          <i
                            style="height: 20px; line-height: 20px;"
                          >
                            <svg
                              class="eva eva-trash"
                              fill="#ffffff"
                              height="20px"
                              viewBox="0 0 24 24"
                              width="20px"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                data-name="Layer 2"
                              >
                                <g
                                  data-name="trash"
                                >
                                  <rect
                                    height="24"
                                    opacity="0"
                                    width="24"
                                  />
                                  <path
                                    d="M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </i>
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div />
      <div />
    </div>
  </div>
</DocumentFragment>
`;
